@@ -54,3 +54,4 @@
 /race_ethnicity/update_unknown_value_typo.sql
 /fatal_police_shootings/increase_column_name.sql
 /apha_racism_declarations/create.sql
+/covid_behind_bars/create.sql
